# cpp_bolean_exp_evaluator

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  debug_build.sh  ini_handler.cpp  ini_handler.h  output_executable  run.sh  script_build.sh  script_clean.sh  script_test_client_server.sh  script_test_lib.sh  script_test_server.sh  source.cpp  test.cpp
src/: client.cpp  ini_handler.cpp  ini_handler.h  server.cpp  test.cpp
test_file/: config.ini
